tests/pass/controlflow5.rx
/*
Verdict: Success
*/

fn main() {
    let a: i32 = test();
    exit(0);
}

fn test() -> i32 {
    {
        if (3 > 4) {
            return 3;
        } else {
            return 7;
        }
        1
    };
}